send_mail update
