# swagger_server/swagger/swagger.yaml
@@ -89,6 +89,39 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: swagger_server.controllers.authorization_controller
+  /send_mail:
+    post:
+      tags:
+      - authorization
+      summary: Send mail
+      description: Send mail.
+      operationId: send_mail
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SendEmailRequest'
+        required: true
+      responses:
+        "200":
+          description: mail sent successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response'
+        "401":
+          description: Unauthorized access error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-openapi-router-controller: swagger_server.controllers.authorization_controller
   /branches:
     post:
       tags:
@@ -367,6 +400,13 @@ components:
         username:
           type: string
         password:
+          type: string
+    SendEmailRequest:
+      type: object
+      properties:
+        subject:
+          type: string
+        message:
           type: string
     Branch:
       type: object
